js/src/styles/navbar.scss
@import "variables.scss";

.navbar {
    height: 51px;
    padding: 0;
    z-index: 999;
    background-color: $header-bg;
    color: #fff;

    .container-fluid {
        padding: 0.35rem 0;
        background-color: inherit;
        white-space: nowrap !important;
        overflow-x: auto;

        @media (min-width: 768px) {
            padding-right: 1rem;
        }

        .nav-content {
            display: flex;
            flex-wrap: nowrap;
            padding: 0;
            justify-content: space-between;
            width: 100%;

            @media (min-width: 768px) {
                justify-content: normal;
                width: unset;
            }
        }
    }

    a.home {
        color: #fff;
        margin-right: 0;
        margin-left: 1rem;

        i.material-icons {
            font-size: 22px;
        }

        &:hover {
            color: #aeb7c2;
        }
    }

    .logo {
        margin-right: 0.35rem;
        margin-bottom: 3px;
        max-width: 25px;
        max-height: 25px;
    }

    .navbar-brand {
        margin-right: 0;
        margin-left: 1rem;
        font-weight: 300;
        font-size: 1.15rem;
    }

    .navbar-collapse {
        padding-left: 1rem;
    }

    .nav-pages {
        margin: 0;
        padding: 0;
    }

    .nav-link {
        color: #aeb7c2;

        &:hover {
            color: #fff;
        }

        &.active {
            color: #fff;
        }
    }

    .subtitle {
        color: #aeb7c2;
    }

    a.source-code {
        color: #aeb7c2;

        &:hover {
            color: #fff;
        }

        i.material-icons {
            font-size: 18px;
            vertical-align: middle;
            margin-left: 5px;
        }
    }

    .navbar-toggler-icon {
        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
    }

    .circle {
        border: 2px solid #aeb7c2;
        width: 12px;
        height: 12px;
        border-radius: 50%;
    }

    .filled-circle {
        height: 12px;
        width: 12px;
        background-color: #aeb7c2;
        border-radius: 50%;
        display: inline-block;
    }
}

